# WinMainCMake

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
WinMainCMake/: CMakeLists.txt  Resource.h  WinMainCMake.cpp  WinMainCMake.h  framework.h
